styles/globals.css
/* @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@700;900&family=Poppins:wght@300;400;500&display=swap'); */

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    /* barlow-700 - latin */
    @font-face {
        font-family: 'Barlow';
        font-style: normal;
        font-weight: 700;
        src: local('Barlow'),
            url('/fonts/barlow-v5-latin-700.woff2') format('woff2'),
            url('/fonts/barlow-v5-latin-700.woff') format('woff');
    }

    /* barlow-900 - latin */
    @font-face {
        font-family: 'Barlow';
        font-style: normal;
        font-weight: 900;
        src: local('Barlow'),
            url('/fonts/barlow-v5-latin-900.woff2') format('woff2'),
            url('/fonts/barlow-v5-latin-900.woff') format('woff');
    }

    /* poppins-300 - latin */
    @font-face {
        font-family: 'Poppins';
        font-style: normal;
        font-weight: 300;
        src: local('Poppins'),
            url('/fonts/poppins-v15-latin-300.woff2') format('woff2'),
            url('/fonts/poppins-v15-latin-300.woff') format('woff');
    }

    /* poppins-regular - latin */
    @font-face {
        font-family: 'Poppins';
        font-style: normal;
        font-weight: 400;
        src: local('Poppins'),
            url('/fonts/poppins-v15-latin-regular.woff2') format('woff2'),
            url('/fonts/poppins-v15-latin-regular.woff') format('woff');
    }

    /* poppins-500 - latin */
    @font-face {
        font-family: 'Poppins';
        font-style: normal;
        font-weight: 500;
        src: local('Poppins'),
            url('/fonts/poppins-v15-latin-500.woff2') format('woff2'),
            url('/fonts/poppins-v15-latin-500.woff') format('woff');
    }

    h1,
    h2,
    h3,
    h4 {
        @apply font-bold font-primary;
    }

    h1 {
        @apply text-3xl md:text-5xl;
    }

    h2 {
        @apply text-2xl md:text-4xl;
    }

    h3 {
        @apply text-xl md:text-3xl;
    }

    h4 {
        @apply text-lg;
    }

    body {
        @apply text-sm md:text-base font-body;
    }

    .layout {
        /* 750px */
        max-width: 70rem;
        @apply w-11/12 mx-auto;
    }
}

@layer components {
    .view {
        background-image: linear-gradient(#33333300, #33333300),
            linear-gradient(to right, #85f0b1, #3fcbed);
        background-size: 100% 4px, 0 4px;
        background-position: 100% 100%, 0 100%;
        background-repeat: no-repeat;
        transition: background-size 0.3s ease;
    }

    .view-container:hover .view,
    .view:hover {
        background-size: 0 4px, 100% 4px;
    }
}

@layer utilities {
    .animate-float {
        animation: float 3s infinite ease-out;
    }

    .float-delay {
        animation-delay: 1s;
    }
    .float-delay-2 {
        animation-delay: 1.9s;
    }

    .full-border-orange {
        /* Utility to make border primary to full size */
        background-image: linear-gradient(transparent, transparent),
            linear-gradient(to right, #fdb26e, #fcc86c);
        background-origin: border-box;
        background-clip: content-box, border-box;
        border-color: transparent;
    }

    @keyframes float {
        0% {
            transform: translatey(0);
        }
        50% {
            transform: translatey(1rem);
        }
        100% {
            transform: translatey(0);
        }
    }
}

.slick-prev::before,
.slick-next::before {
    content: none;
    display: none;
}

.slick-prev {
    left: -15px;
}
.slick-next {
    right: -15px;
}
.pre-event .slick-prev {
    left: -30px;
}

